CAY-2982 Modeler: when upgrading projects allow upgraders to send outcome messages